src/scss/layout/_about.scss
// Mobile +360px
.about {
  height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-attachment: fixed;
  display: flex;
  justify-content: center;
  align-items: center;

  &__container {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    display: flex;
    flex-direction: column;

    &__image {
      height: 274px;
      width: 85%;
      border-radius: 50%;
      margin-bottom: 1em 0;
    }

    &__header {
      color: $color-primary;
      font-size: $font-size-m;
      margin-top: 1em;
    }
    &__underline {
      border-bottom: 2px solid $color-primary;
      width: 40px;
      margin-bottom: 1em;
    }
    &__description {
      text-align: left;
      font-size: $font-size-s;
      width: 317px;
    }
    &__button {
      display: flex;
      justify-content: flex-start;
      position: relative;
      right: 10px;
      margin-top: 1em;
    }
  }
}

// Mobile +480px
@include mq(s) {
  .about {
    &__container {
      &__image {
        height: 360px;
      }
      &__header {
        font-size: $font-size-l;
      }
      &__description {
        width: 430px;
        font-size: $font-size-s;
      }
    }
  }
}

// Tablet +768px
@include mq(m) {
  .about {
    &__container {
      &__image {
        height: 440px;
      }
      &__description {
        width: 500px;
      }
    }
  }
}

// Desktop from 1024px
@include mq(l) {
  .about {
    &__container {
      flex-direction: row;
      gap: 3em;
      &__image {
        height: 400px;
      }
      &__text {
        flex-direction: column;
      }
      &__button {
        right: 8px;
      }
    }
  }
}

